# FileTypeTrans

./: .coverage  CLAUDE.md  CODE_REVIEW.md  PRD.md  PROJECT_PROCESS.md  README.md  TEST_CASES.md  main.py  pyproject.toml  run.py
src/: main.py
src/config/: config.py  constants.py
src/core/: converter.py  file_handler.py  traversal.py
src/core/converters/: __init__.py  docx_converter.py  excel_converter.py  pdf_converter.py  pptx_converter.py  text_converter.py
src/ui/: cli.py  progress.py
src/ui/gui/: main_window.py  progress_dialog.py  result_dialog.py  worker.py
src/utils/: exceptions.py  logger.py
tests/: test_cli.py  test_config.py  test_constants.py  test_converter.py  test_docx_converter.py  test_excel_converter.py  test_exceptions.py  test_file_handler.py  test_logger.py  test_main.py  test_pdf_converter.py  test_pptx_converter.py  test_progress.py  test_text_converter.py  test_traversal.py
tests/test_gui/: test_main_window.py  test_progress_dialog.py  test_result_dialog.py  test_worker.py
